# matrix

./: .gitignore  CLAUDE.md  main.py  pyproject.toml  train.py
configs/: full.yaml  full_wide.yaml  large.yaml  medium.yaml  pattern_test.yaml  small.yaml  smoke.yaml  tpu_v5lite_prod.yaml
docs/: ARCHITECTURE.md  PROJECT_ARCHITECTURE.md  TPU_TRAINING_STRATEGY.md
src/dwa/: __init__.py  assembly.py  assembly_pallas.py  config.py  losses.py  model.py  monitor.py  parts.py  pool.py  retrieval.py  run_config.py  schedule.py  utils.py
tests/: conftest.py  test_assembly.py  test_checkpoint.py  test_config.py  test_losses.py  test_model.py  test_monitor.py  test_resume_e2e.py  test_retrieval.py  test_schedule.py  test_training.py
